--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Taller4"
         tools:targetApi="31">
+
         <activity
             android:name=".PantallaDeInicio"
             android:exported="true"
@@ -21,12 +22,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="Lista de Películas"
             android:theme="@style/Theme.AppCompat">
         </activity>
+
+        <receiver
+            android:name=".PeliculasWidgetProvider"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.example.taller4.ACTION_REFRESH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/peliculas_widget_info" />
+        </receiver>
+
+        <service android:name=".PeliculasWidgetService" android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
