--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".PantallaDeInicio"
+            android:name=".Pantalla.PantallaDeInicio"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Taller4">
@@ -31,7 +31,7 @@
         </activity>
 
         <receiver
-            android:name=".PeliculasWidgetProvider"
+            android:name=".Widget.PeliculasWidgetProvider"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -42,7 +42,7 @@
                 android:resource="@xml/peliculas_widget_info" />
         </receiver>
 
-        <service android:name=".PeliculasWidgetService" android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <service android:name=".Widget.PeliculasWidgetService" android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 
